addons/pos_self_order/static/src/kiosk/self_order_kiosk_index.scss
:root {
  @include o-kiosk-1k() {
    --root-font-size: #{$o-kiosk-font-size-1k};
  }

  @include o-kiosk-2k() {
    --root-font-size: #{$o-kiosk-font-size-2k};
  }

  @include o-kiosk-4k() {
    --root-font-size: #{$o-kiosk-font-size-4k};
  }
}

html,
body {
  width: 100%;
  height: 100vh;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  overflow: hidden;
  -webkit-user-select: none !important;
  -ms-user-select: none !important;
  user-select: none !important;
}

.h-10 {
  height: 10%;
}

.h-90 {
  height: 90%;
}

.o_kiosk-card img {
  object-fit: contain;
  aspect-ratio: 1/1;
}

/* Custom styling for .btn-primary to reflect company settings colors */

.btn-primary {
  background-color: var(--companyColor);
  border-color: transparent;

  &:hover {
      background-color: var(--companyColor);
      border-color: var(--companyColor);
  }

  &:active, &:focus {
      background-color: $white;
      color: var(--companyColor);
      border-color: var(--companyColor);
  }

  &.disabled {
      background-color: var(--companyColor);
      border-color: var(--companyColor);
      opacity: .5;
  }
}

.text-bg-primary, .bg-primary {
  background-color: var(--companyColor) !important;
  border-color: var(--companyColor) !important;
}

.border-primary {
  border-color: var(--companyColor) !important;
}

